--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "sass": "^1.35.1"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "prettier": "2.3.2"
   },
   "keywords": [
@@ -36,7 +37,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "deploy": "gatsby build && gh-pages -d public"
   },
   "repository": {
     "type": "git",
