--- a/package.json
+++ b/package.json
@@ -47,5 +47,6 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "homepage": "https://jonbestdev.github.io/jukebox-app/"
 }
