package.json update

--- a/package.json
+++ b/package.json
@@ -43,10 +43,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/jonbestdev/jukebox-app"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "homepage": "https://jonbestdev.github.io/jukebox-app/"
+  "homepage": "."
 }
