--- a/package.json
+++ b/package.json
@@ -48,5 +48,5 @@
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
-  "homepage": "."
+  "homepage": "https://jonbestdev.github.io/jukebox-app/"
 }
